Fix shrinking events when not overlapping

--- a/src/components/eventButton/EventButton.scss
+++ b/src/components/eventButton/EventButton.scss
@@ -29,6 +29,7 @@
 
   &-normal {
     @extend .Kalend__Event;
+    border: solid 1px white !important;
   }
 
   &-header {
